fixed login view and readability of main-page

--- a/src/components/LogOutStart/styles.css
+++ b/src/components/LogOutStart/styles.css
@@ -2,13 +2,13 @@
     height: 100%;
     width: 100%;
     position: absolute;
-    
+    opacity: 1;
 }
 
-.logFood{
+#logFood{
     width: 100%;
     height: 100%;
-    opacity: 0.4;
+    /* opacity: 0.2; */
     object-fit: cover;
     position: relative;
 }
@@ -21,7 +21,7 @@
     color: white;
     font-weight: bold;
     font-size: 6.5vw;
-    
+    /* opacity: 0.6; */
 }
 
 .logOutStart{
